--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.16",
+    "marked": "^2.0.3",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
