--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "marked": "^2.0.3",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swiper": "^6.6.1"
   }
 }
